tests/health/tests__lsp__field_definition_test.toit.gold
tests/lsp/field_definition_test.toit:30:5: error: Can't access instance members before `super` call.
    field
    ^~~~~
tests/lsp/field_definition_test.toit:35:5: error: Can't access instance members before `super` call.
    field = 0
    ^~~~~
